--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
  
 <body>
 <h1>技术类</h1>
-<a href="https://u3uuuuuu.github.io/tech/demo1">demo1</a>
+<a href="https://u3uuuuuu.github.io/tech/demo1">demo1</a><br />
 <h1>其他</h1>
-<a href="https://u3uuuuuu.github.io/other/demo2">demo2</a>
-<a href="https://www.runoob.com/">访问菜鸟教程</a>
+<a href="https://u3uuuuuu.github.io/other/demo2">demo2</a><br />
 </body>
 </html>
